--- a/src/app/chess-pgn-trainer.css
+++ b/src/app/chess-pgn-trainer.css
@@ -77,3 +77,18 @@ html, body {
 .pausedBoard {
 	opacity:50%;
 }
+
+.verify-btn {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.1em;
+}
+
+.verify-btn:hover {
+    background-color: #45a049;
+}
+
